--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/nino-vrijman/has-my-bike-been-found/issues"
   },
-  "homepage": "https://github.com/nino-vrijman/has-my-bike-been-found#readme"
+  "homepage": "https://github.com/nino-vrijman/has-my-bike-been-found#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "puppeteer": "^1.12.1"
+  }
 }
