--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/nino-vrijman/has-my-bike-been-found#readme",
   "dependencies": {
+    "chalk": "^2.4.2",
     "cheerio": "^1.0.0-rc.2",
+    "ora": "^3.0.0",
     "puppeteer": "^1.12.1"
   }
 }
