--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
   "preferGlobal": true,
   "devDependencies": {
     "cross-env": "^5.2.0"
+  },
+  "nodemonConfig": {
+    "ignore": ["history.json"],
+    "delay": "2500"
   }
 }
